Fixed figure alignment

--- a/main.css
+++ b/main.css
@@ -176,7 +176,6 @@ footer p span a:hover {
 
 .images {
     display: flex;
-    align-items: center;
     margin: 1.5em 0;
     justify-content: center;
 }
